IE has some issue where, if only the triangle is present and not the accompanying scope text, the width calculations for the input box (which has an larger-than-default font size) throw other stuff off, and the magnifying glass goes off-page.  We didn't bother addressing this on initial Primo rollout because it would only apply to somebody who happened to be using IE at some crazily narrow window width, but now that the size by which the scope text hides has increased, this hack changes the font size just for IE to default (1em), and the magnifying glass no longer goes off-screen.  Edge, which I looked at downstairs, doesn't have the same issue and this CSS hack doesn't get applied there.  Also checked home and non-home pages in FF, Chrome, and Safari on Quinn's iPad, and on my Android phone in FF, Chrome, and Edge. Refs #153.

--- a/libsite7b/css/header.css
+++ b/libsite7b/css/header.css
@@ -261,6 +261,17 @@
   flex: 1;
   outline: none;
 }
+/* This is a hack to make font-size different in IE 10 & 11. 
+   Without it, some combination of flex styling and increased font size on the input pushes the 
+   triangle and magnifying glass way off screen on smaller-width IE windows in cases where the 
+   width of the screen leaves too little room to display the scope description in line anymore 
+   (said width before it just shows a triangle has now increased with the change from 
+   "Catalog + Articles" to "Articles + GW & Consortium Catalog"). */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  #search-input {
+    font-size: 1em;
+  }
+}
 
 #search-input::-ms-clear {
   height: 20px;
